# velvet-ai-core

./: CONTRIBUTING.md  README.md  connection_test.md  pyproject.toml  velour_connection_test.md
.github/ISSUE_TEMPLATE/: bug-.md  feature.md
.github/workflows/: ci.yml  velour-feed.yml
docs/: ai_collaborator_boundaries.md  architecture_execution_law.md  boot_identity_sequence.md  core_runtime_responsibility_boundary.md  naming_and_binding.md  retrofit_body_registry.md  room_body_interface.md  scene_doctrine.md
docs/failure-recovery/: failsafe.md  failure.md  risk.md
docs/io-contracts/: commands.md  events.md  wallet.md
docs/runtime/: architecture.md  boot.md  receipts.md  state.md  time.md
examples/: custom_module.py  minimal_runtime.py
tests/: test_authority.py  test_dispatcher.py  test_imports.py  test_memory_associations.py  test_memory_cli.py  test_memory_cli_hardening.py  test_memory_confidence.py  test_memory_decay.py  test_memory_deduplication.py  test_memory_lifecycle.py  test_memory_module.py  test_memory_recall.py  test_memory_retrieval.py  test_memory_transition_bridge.py  test_python38_baseline.py  test_runtime_recall_provider.py
velvet/: __main__.py  service.py
velvet mobile/velvet_layer3b/velvet_layer3b/: LAYER3A_MODE_BEHAVIOR.md  LAYER3B_VOICE_BEHAVIOR.md  README.md  buildozer.spec  main.py  test_layer2.py  test_layer3a.py  (+1 more)
velvet/cli/: __init__.py  memory.py
velvet/core/: __init__.py  __main__.py  command_router.py  context.py  logger.py  module_loader.py  registry.py  runtime.py  velvet_module.py
velvet/modules/: __init__.py
(+43 files in other folders)
